# PoseGraphOptimizationDemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: edges.txt  poseA_noise.txt  poseA_opti.txt  poseA_quaterniond.txt  poseB_noise.txt  poseB_opti.txt  poseB_quaterniond.txt
include/: ceres_definition.h  optimizer.h
scripts/: pose_generator.py  pose_recorder.py  trajectory_visualization.py
src/: ceres_definition.cc  main.cc  optimizer.cc
